<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddTodoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/amiko"
            android:textSize="20sp"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_routine"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/amiko"
            android:textSize="18sp"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="20dp"
            android:hint="@string/todo_title_hint"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/todo_name"
                android:fontFamily="@font/amiko"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_new_todo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/create_account_button_bg"
            android:fontFamily="@font/amiko"
            android:padding="10dp"
            android:text="@string/add_todo_button"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_of_operation"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/amiko"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</FrameLayout>