<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:id="@+id/custom_alert_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_todo"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/amiko"
        android:textSize="20sp"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_todo_name"
        app:shapeAppearance="@style/Rounded">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/todo_name"
            android:fontFamily="@font/amiko"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_note_of_operation"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/amiko"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>