<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/login_account"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/light_brown"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email"
        app:shapeAppearance="@style/Rounded">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/user_email"
            android:fontFamily="@font/amiko"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/light_brown"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/light_brown"
        android:hint="@string/hint_password"
        app:shapeAppearance="@style/Rounded">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:id="@+id/user_password"
            android:fontFamily="@font/amiko"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/create_account_button_bg"
        android:fontFamily="@font/amiko"
        android:padding="10dp"
        android:text="@string/login_btn"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_sign_text"
        android:id="@+id/move_to_signup"
        android:fontFamily="@font/amiko"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_blue"
        android:gravity="center" />

</LinearLayout>