<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/amiko"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/amiko"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/your_name"
                android:enabled="false"
                android:fontFamily="@font/amiko"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/amiko"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/your_email"
                android:enabled="false"
                android:fontFamily="@font/amiko"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_options"
                    android:textColor="@color/dark_blue"
                    android:fontFamily="@font/amiko"
                    android:textSize="20sp"
                    android:gravity="start"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete_account"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/delete_forever_button_bg"
                    android:fontFamily="@font/amiko"
                    android:padding="10dp"
                    android:drawableStart="@drawable/delete_forever"
                    android:drawableTint="@color/cheery_red"
                    android:text="@string/delete_account_btn"
                    android:textColor="@color/cheery_red"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/logout"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/create_account_button_bg"
                    android:fontFamily="@font/amiko"
                    android:padding="10dp"
                    android:text="@string/logout_btn"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/logout"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>